# pi-chart

./: CMakeLists.txt  README.md  configure.sh
src/: CMakeLists.txt  index.html  main.c  pi-install.sh  pi_am2315.c  pi_am2315.h  pi_chart_gpio.c  pi_chart_gpio.h  pi_chart_server.c  pi_chart_server.h  pi_chart_settings.c  pi_chart_settings.h  pi_intmap.c  pi_intmap.h  pi_mem_info.c  pi_mem_info.h  pi_process.c  pi_process.h  pi_string.c  pi_string.h  pi_strmap.c  pi_strmap.h  pi_template_generator.c  pi_template_generator.h  pi_utils.c  pi_utils.h  pichart.sh  version_config.h.in
src/css/: app.css
src/proc/: meminfo
src/www/: index.html
